now video tag is set

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>audio folder is set here now</h1>
     <audio controls src="assets/audio/goat.mp3"></audio>
+    <div>
+        <h1>now i video set here</h1>
+        <video width="300px" controls src="assets/video/video.mp4"></video>
+    </div>
 </body>
 </html>
