couple picture is show here

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
         <h1>now i video set here</h1>
         <video width="300px" controls src="assets/video/video.mp4"></video>
     </div>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/uLgf9qDCJMA?si=sciBeveKvErnoCJu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
