--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
             
             <ul>
                 <li>
-                    <a href="index.html">index.html</a>
+                    <a href="indexx.html">indexx.html</a>
 
                 </li>
                 <li><a href="blog.html">blog.html</a></li>
